--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -14,6 +14,18 @@
     color: $black;
     font-weight: 700;
     padding: .9rem 0;
+    display: inline-block;
+    width: 25%;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    .black {
+      display: none;
+    }
+    .white {
+      display: block;
+    }
   }
   .navbar-nav {
     .nav-item {
@@ -38,6 +50,7 @@
     .navbar-brand {
       padding: .5rem 0;
       color: fade-out($white, .5);
+      
     }
     .nav-link {
       transition: none;
