--- a/src/assets/sass/_signup.scss
+++ b/src/assets/sass/_signup.scss
@@ -2,11 +2,10 @@
   padding: 10rem 0;
   background: linear-gradient(
       to bottom,
-      #{fade-out($black, 0.9)} 0%,
-      #{fade-out($black, 0.5)} 75%,
-      $black 100%
-    ),
-    url('../images/bg-signup.jpg');
+      #{fade-out($white, 0.9)} 0%,
+      #{fade-out($white, 0.5)} 75%,
+      $white 100%
+    );
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
