--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -8,13 +8,14 @@
 @import 'projects.scss';
 @import 'signup.scss';
 @import 'contact.scss';
+@import 'footer.scss';
 
 @import './fontawesome/css/all.min.css';
-@import url('https://fonts.googleapis.com/css?family=Varela+Round');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
 
 body {
-  font-family: 'Nunito';
+  font-family: 'Roboto';
   letter-spacing: 0.0625em;
 }
 
