--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -4,13 +4,14 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       #{fade-out($black, 0.9)} 0%,
       #{fade-out($white, 1)} 75%,
       $white 100%
     ),
-    url('../images/bg-masthead.jpg');
+    url('../images/bg-v2.png'); */
+  background: url('../images/bg-v2.png');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -25,7 +26,7 @@
       fade-out(white, 1)
     );
     -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+    //-webkit-background-clip: text;
   }
   h2 {
     max-width: 20rem;
