--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -9,6 +9,7 @@
 @import 'signup.scss';
 @import 'contact.scss';
 @import 'footer.scss';
+@import 'features.scss';
 
 @import './fontawesome/css/all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto');
