--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,7 +1,76 @@
 .about-section {
   height: 100vh;
-  padding-top: 5.85rem;
-  p {
-    margin-bottom: 5rem;
+  padding: 5.85rem 12% 0px 12%;
+  .container {
+    max-width: unset;
+    #text {
+      padding: 0px 27px 0px 55px;
+      .about-title {
+        text-align: left;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 42px;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #707070;
+      }
+      .about-desc p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: justify;
+        color: #707070;
+      }
+    }
+
+    #images {
+      padding: 0px 12px 0px 27px;
+      .img_1 {
+        width: 66%;
+        position: relative;
+        margin-left: auto;
+        margin-bottom: -33%;
+        z-index: 1;
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border: 20px solid #f9f9f9;
+        }
+        &:before {
+          content: '';
+          display: block;
+          padding-top: 100%;
+        }
+      }
+      .img_2 {
+        width: 66%;
+        position: relative;
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        &:before {
+          content: '';
+          display: block;
+          padding-top: 100%;
+        }
+      }
+    }
   }
 }
