--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -42,8 +42,19 @@
   .foot {
     bottom: 0;
     margin-bottom: 40px;
+    p {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 16px;
+      text-align: center;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
   }
-  .app-screen img{
+  .app-screen img {
     transform: translate(-15.895px, 0px);
   }
   @media (min-width: 768px) {
