--- a/src/assets/sass/_download.scss
+++ b/src/assets/sass/_download.scss
@@ -1,8 +1,37 @@
 .download-section {
-    height: 100vh;
-    padding-top: 5.85rem;
-    p {
-      margin-bottom: 5rem;
+  height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+  //padding-top: 5.85rem;
+  p {
+    margin-bottom: 5rem;
+  }
+  .container {
+    z-index: 1;
+    .download-title {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      line-height: 42px;
+      text-align: center;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: #707070;
+      margin-bottom: 21.5px;
+    }
+    .images img {
+      margin: 21.5px 0px;
+      transform: translateX(63.5px);
+    }
+    .stores {
+      margin-top: 21.5px;
+      .app_store {
+        margin-right: 44px;
+      }
+      .google_play {
+        margin-left: 44px;
+      }
     }
   }
-  
+}
