--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -1,4 +1,27 @@
 footer {
     background-color: #EFEFEF;
     color: #9A9A9B;
+    padding: 96px 0px 20px 0px !important;
+    .container {
+        p {
+            margin: 0px;
+        }
+        .social {
+            margin-bottom: 58px;
+            .face_cont{
+                background: #76BDE5;
+                width: 53px;
+                height: 53px;
+                border-radius: 50%;
+                margin-right: 30px;
+            }
+            .insta_cont{
+                background: #76BDE5;
+                width: 53px;
+                height: 53px;
+                border-radius: 50%;
+                margin-left: 30px;
+            }
+        }
+    }
 }
