--- a/src/assets/sass/_features.scss
+++ b/src/assets/sass/_features.scss
@@ -1,6 +1,6 @@
 .features-section {
   height: 100vh;
-  //padding-top: 5.85rem;
+  padding-top: 5.85rem;
   .features-title {
     font-family: Roboto;
     font-style: normal;
