--- a/src/assets/sass/_download.scss
+++ b/src/assets/sass/_download.scss
@@ -1,8 +1,9 @@
 .download-section {
   height: 100vh;
   position: relative;
-  overflow-x: hidden;
-  //padding-top: 5.85rem;
+  overflow: hidden;
+  padding-top: 5.85rem;
+  box-sizing: content-box;
   p {
     margin-bottom: 5rem;
   }
