--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -15,7 +15,7 @@
   background-position: initial;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: 100%;
+  background-size: cover;
   h1 {
     font-family: 'Roboto';
     font-size: 2.5rem;
