--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -1,6 +1,15 @@
 #mainNav {
   min-height: 56px;
-  background-color: #f9f9f9;
+  background-color: transparent;
+  display: block;
+  transition: background-color 0.6s ease-in-out;
+  .logo_nav {
+    height: 80px;
+    img {
+      height: 100%;
+      padding: 0px 10px;
+    }
+  }
   .navbar-toggler {
     font-size: 80%;
     padding: 0.75rem;
@@ -28,6 +37,7 @@
     }
   }
   .navbar-nav {
+    display: none;
     .nav-item {
       &:hover {
         color: fade(white, 80%);
@@ -41,7 +51,55 @@
       }
     }
   }
-  #lang-btn {
+  .links.nav_mob {
+    height: 0;
+    visibility: hidden;
+    transition: all 0.6s ease-in-out;
+    a {
+      color: $black;
+      visibility: hidden;
+    }
+    &.show {
+      height: 392px;
+      visibility: visible;
+      a {
+        visibility: visible;
+        transition: visibility 0.2s ease-in-out 0.6s;
+      }
+    }
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    font-size: 28px;
+    line-height: 80px;
+    padding: 0px 2px;
+    right: 1rem;
+    top: 0.5rem;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 40px;
+    display: block;
+  }
+  &.show {
+    background-color: #f9f9f9;
+    transition: background-color 1.2s ease-in-out;
+    .hamburger {
+      color: $black;
+    }
+  }
+  &.navbar-shrink {
+    background-color: #f9f9f9;
+    transition: background-color 1.2s ease-in-out;
+    .hamburger {
+      color: $black;
+    }
+  }
+
+  /* #lang-btn {
     right: 30px;
     background: rgba(92, 92, 92, 0.3);
     border-radius: 2px;
@@ -61,16 +119,28 @@
         color: $white;
       }
     }
-    &:focus{
+    &:focus {
       outline: none;
     }
-  }
+  } */
   @media (min-width: 992px) {
+    display: flex;
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
     background-color: transparent;
     transition: background-color 0.6s ease-in-out;
+
+    .navbar-nav {
+      display: flex;
+    }
+
+    .links.nav_mob,
+    .logo_nav,
+    .hamburger {
+      display: none;
+    }
+
     .navbar-brand {
       padding: 0.5rem 0;
       color: fade-out($white, 0.5);
@@ -126,14 +196,14 @@
           border-bottom: 0.25rem solid $primary;
         }
       }
-      #lang-btn {
+      /* #lang-btn {
         p {
           color: $gray-600;
           &.active {
             color: $white;
           }
         }
-      }
+      } */
     }
   }
 }
