--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,11 +1,13 @@
 .about-section {
   min-height: 100vh;
-  padding: 5.85rem 12% 0px 12%;
+  padding: 5.85rem 8% 0px 8%;
   //padding: 0px 12% 0px 12%;
   .container {
     max-width: unset;
+    flex-direction: column-reverse;
+    padding: 0px;
     #text {
-      padding: 0px 27px 0px 55px;
+      padding: 15px 0px 0px 0px;
       .about-title {
         text-align: left;
         font-family: Roboto;
@@ -29,7 +31,7 @@
     }
 
     #images {
-      padding: 0px 12px 0px 27px;
+      padding: 0px;
       .img_1 {
         width: 66%;
         position: relative;
@@ -45,7 +47,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
-          border: 20px solid #f9f9f9;
+          border: 15px solid #f9f9f9;
         }
         &:before {
           content: '';
@@ -72,6 +74,25 @@
           padding-top: 100%;
         }
       }
+    }
+  }
+  @media (min-width: 992px) {
+    padding: 5.85rem 12% 0px 12%;
+    .container {
+      flex-direction: row;
+      padding: 0px 15px;
+      #text {
+        padding: 0px 27px 0px 55px;
+      }
+
+      #images {
+        padding: 0px 12px 0px 27px;
+      }
+    }
+  }
+  @media (min-width: 420px) {
+    .img_1 img {
+      border: 20px solid #f9f9f9 !important;
     }
   }
 }
