--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -13,7 +13,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
-        font-size: 36px;
+        font-size: 26px;
         line-height: 42px;
         letter-spacing: 0.1em;
         text-transform: uppercase;
@@ -87,6 +87,24 @@
 
       #images {
         padding: 0px 12px 0px 27px;
+      }
+    }
+  }
+  @media (min-width: 360px) {
+    .container {
+      #text {
+        .about-title {
+          font-size: 30px;
+        }
+      }
+    }
+  }
+  @media (min-width: 568px) {
+    .container {
+      #text {
+        .about-title {
+          font-size: 36px;
+        }
       }
     }
   }
