--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,5 +1,6 @@
 .about-section {
   min-height: 100vh;
+  height: auto;
   padding: 5.85rem 8% 0px 8%;
   //padding: 0px 12% 0px 12%;
   .container {
