--- a/src/assets/sass/_features.scss
+++ b/src/assets/sass/_features.scss
@@ -37,6 +37,7 @@
   .carousel {
     flex-grow: 1;
     padding: 0px 8%;
+    min-height: fit-content;
     display: flex;
     flex-direction: column;
     .carousel-indicators {
@@ -65,6 +66,7 @@
     .carousel-inner {
       order: 1;
       flex-grow: 1;
+      min-height: fit-content;
       .carousel-item {
         height: 100%;
         .feat_Title {
