--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -60,7 +60,7 @@
       visibility: hidden;
     }
     &.show {
-      height: 392px;
+      height: 448px;
       visibility: visible;
       a {
         visibility: visible;
@@ -99,30 +99,10 @@
     }
   }
 
-  /* #lang-btn {
-    right: 30px;
-    background: rgba(92, 92, 92, 0.3);
-    border-radius: 2px;
-    padding: 0px 6px;
-    border: none;
-    p {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 12px;
-      line-height: 14px;
-      text-align: center;
-      text-transform: uppercase;
-      color: #d2d2d2;
-      margin: 2px;
-      &.active {
-        color: $white;
-      }
-    }
-    &:focus {
-      outline: none;
-    }
-  } */
+  #lang-btn {
+    display: none;
+  }
+  
   @media (min-width: 992px) {
     display: flex;
     padding-top: 0;
@@ -196,14 +176,39 @@
           border-bottom: 0.25rem solid $primary;
         }
       }
-      /* #lang-btn {
+      #lang-btn {
         p {
           color: $gray-600;
           &.active {
             color: $white;
           }
         }
-      } */
+      }
+    }
+    #lang-btn {
+      display: flex;
+      right: 30px;
+      background: rgba(92, 92, 92, 0.3);
+      border-radius: 2px;
+      padding: 0px 6px;
+      border: none;
+      p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #d2d2d2;
+        margin: 2px;
+        &.active {
+          color: $white;
+        }
+      }
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
